Added minor changes to activity_login and added TODO comment

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,6 +131,7 @@
         android:id="@+id/tv_emailaddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="72dp"
         android:text="@string/email_address"
         android:textColor="@color/black"
