--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,21 +7,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- TODO (5) Change edit text font if necessary    -->
+
     <ImageView
-        android:id="@+id/iv_logo"
+        android:id="@+id/iv_login_logo"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/tv_logo_name"
+        app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintHorizontal_bias="0.58"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gl_above_logo"
+        app:layout_constraintTop_toTopOf="@+id/gl_login_above_logo"
         app:srcCompat="@drawable/orangepaw" />
 
     <TextView
-        android:id="@+id/tv_logo_name"
+        android:id="@+id/tv_login_logo_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logo_name"
@@ -29,14 +31,14 @@
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tv_logo_description"
+        app:layout_constraintBottom_toTopOf="@+id/tv_login_logo_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />
 
     <TextView
-        android:id="@+id/tv_logo_description"
+        android:id="@+id/tv_login_logo_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logo_description"
@@ -47,10 +49,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_logo_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_name" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_left_of_email"
+        android:id="@+id/gl_login_left_of_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -58,7 +60,7 @@
         app:layout_constraintGuide_percent="0.10" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_right_of_image"
+        android:id="@+id/gl_login_right_of_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -66,7 +68,7 @@
         app:layout_constraintGuide_percent="0.90" />
 
     <EditText
-        android:id="@+id/et_emailaddress"
+        android:id="@+id/et_login_emailaddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -75,13 +77,14 @@
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/gray"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/tv_emailaddress" />
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+        app:layout_constraintTop_toBottomOf="@+id/tv_login_emailaddress" />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/et_login_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -90,10 +93,10 @@
         android:ems="10"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
-        android:textColor="@color/gray"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/et_emailaddress" />
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+        app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
 
     <Button
         android:id="@+id/btn_login"
@@ -101,57 +104,58 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/peach"
-        android:text="@string/login"
+        android:text="@string/register"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/et_password" />
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
 
     <TextView
-        android:id="@+id/tv_register"
+        android:id="@+id/tv_login_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/firstTime"
+        android:text="@string/first_time"
         android:textColor="@color/red"
         android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_of_email"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_above_logo"
+        android:id="@+id/gl_login_above_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="0dp"
         app:layout_constraintGuide_percent="0.10" />
 
+    <!--    TODO (2) Check the design if it looks better without this-->
     <TextView
-        android:id="@+id/tv_emailaddress"
+        android:id="@+id/tv_login_emailaddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="72dp"
         android:text="@string/email_address"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_of_email"
-        app:layout_constraintTop_toBottomOf="@+id/tv_logo_description" />
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
+        app:layout_constraintTop_toBottomOf="@+id/tv_login_logo_description" />
 
     <ImageView
-        android:id="@+id/iv_logo_email"
+        android:id="@+id/iv_login_logo_email"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginBottom="12dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/et_emailaddress"
-        app:layout_constraintEnd_toStartOf="@+id/gl_right_of_image"
+        app:layout_constraintBottom_toBottomOf="@+id/et_login_emailaddress"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_mail"
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
         app:srcCompat="@drawable/emaillogo" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_left_mail"
+        android:id="@+id/gl_login_left_icons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -159,14 +163,14 @@
         app:layout_constraintGuide_percent="0.80" />
 
     <ImageView
-        android:id="@+id/iv_logo_password"
+        android:id="@+id/iv_login_logo_password"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_password"
-        app:layout_constraintEnd_toEndOf="@+id/et_password"
+        app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
+        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_left_mail"
+        app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
         app:srcCompat="@drawable/passwordlogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
