--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="peach">#FFDAB9</color>
     <color name="gray">#cfcfcf</color>
     <color name="red">#a60210</color>
+    <color name="orangeAppColor">#FF914D</color>
 </resources>
