--- a/app/src/main/res/layout/activity_display_chats.xml
+++ b/app/src/main/res/layout/activity_display_chats.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="sans-serif-black"
         android:text="Your Matches"
-        android:textColor="#000000"
+        android:textColor="@color/orangeAppColor"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
