Finished post_register_upload layout

--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
     <gradient
-        android:startColor="#FFFF0000"
-        android:endColor="#80FF00FF"
+        android:startColor="#FF914D"
+        android:endColor="#FF914D"
         android:angle="270" />
 </shape>
