--- a/app/src/main/res/layout/activity_display_chats.xml
+++ b/app/src/main/res/layout/activity_display_chats.xml
@@ -7,23 +7,46 @@
     android:background="#FFFFFF"
     tools:context=".DisplayChatsActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_logoarea"
+        android:layout_width="0dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="-5dp"
+        android:background="@layout/upper_tray_border_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="180dp"
+            android:layout_height="47dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/orangepaw" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TextView
         android:id="@+id/tv_yourmatches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-black"
         android:text="Your Matches"
         android:textColor="@color/orangeAppColor"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/guideline4"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cl_logoarea" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_matches"
-        android:layout_width="384dp"
-        android:layout_height="634dp"
-        android:layout_marginTop="76dp"
+        android:layout_width="389dp"
+        android:layout_height="545dp"
+        android:layout_marginTop="152dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toEndOf="@id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
