--- a/app/src/main/res/layout/border_layout.xml
+++ b/app/src/main/res/layout/border_layout.xml
@@ -2,16 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#ffffff" />
-
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
-
+    <solid android:color="@android:color/transparent"/>
     <stroke
         android:width="3dp"
         android:color="#2E3135" />
+
 
 </shape>
