--- a/app/src/main/res/layout/activity_post_register_user_details.xml
+++ b/app/src/main/res/layout/activity_post_register_user_details.xml
@@ -4,6 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".PostRegisterUserDetails">
 
+    <TextView
+        android:id="@+id/tv_post_register_add_photos2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/tellOthersAboutYourPet"
+        android:textColor="@color/orangeAppColor"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/gl_post_register_user_details_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_post_register_user_details_left"
+        app:layout_constraintTop_toTopOf="@+id/gl_post_register_user_details_top" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_post_register_user_details_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="0dp"
+        app:layout_constraintGuide_percent="0.10" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_post_register_user_details_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="0dp"
+        app:layout_constraintGuide_percent="0.90" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_post_register_user_details_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="0dp"
+        app:layout_constraintGuide_percent="0.07" />
 </androidx.constraintlayout.widget.ConstraintLayout>
