--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -10,11 +10,11 @@
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/cs_cardarea"
         android:layout_width="346dp"
-        android:layout_height="530dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cl_logoarea" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logoarea"
@@ -53,6 +53,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--TODO:add peripherals(app logo, search, settings button)-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
