Organized classes into MVC architecture.

--- a/app/src/main/res/layout/activity_display_chats.xml
+++ b/app/src/main/res/layout/activity_display_chats.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".DisplayChatsActivity">
+    tools:context=".Activities.DisplayChatsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logoarea"
