--- a/app/src/main/res/layout/activity_post_register_upload_photos.xml
+++ b/app/src/main/res/layout/activity_post_register_upload_photos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".PostRegisterUploadPhotos">
+    tools:context=".Activities.PostRegisterUploadPhotos">
 
     <TextView
         android:id="@+id/tv_post_register_add_photos"
