--- a/app/src/main/res/layout/activity_post_register_user_details.xml
+++ b/app/src/main/res/layout/activity_post_register_user_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".PostRegisterUserDetails">
+    tools:context=".Activities.PostRegisterUserDetails">
 
     <TextView
         android:id="@+id/tv_post_register_add_photos2"
