--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fafafa"
-    tools:context=".SettingsActivity">
+    tools:context=".Activities.SettingsActivity">
 
     <Button
         android:id="@+id/btn_settings_delete_account"
