--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".SwipeActivity">
+    tools:context=".Activities.SwipeActivity">
 
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/cs_cardarea"
